--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,71 @@
-<html>
-  <h1>Search movie</h1>
-  <form id="form">
-    <input type="text" id="search" class="search"/>
-  </form>
-  <main id="main"></main>
-</html>
+<h1>Картинная галерея</h1>
+<div class="row">
+    <div (click)="fir()" class="col">
+        <img class="img" src="https://arthive.net/res/media/img/oy800/work/77b/380955@2x.jpg" alt="">
+        <p>Звездное небо</p>
+        <div class="yu" *ngIf="d">
+            <img src="https://arthive.net/res/media/img/oy800/work/77b/380955@2x.jpg" alt="">
+            <p>Звездное небо <br>
+            Автор: Винсент Ван Гог <br>
+            Год создания: 1889 <br>
+            Размеры: Холст, масло. {{147.4/2}} × 92,1 см <br>
+            Местоположение: Музей современного искусства, Нью-Йорк <br>
+            Описание: Период с мая 1889 по май 1890 года Ван Гог провёл в больнице для душевнобольных Сен-Поль-де-Мозоль в Сен-Реми-де-Прованс после конфликта с Гогеном и потери мочки левого уха[3]. В это время он продолжал плодотворно писать картины и создал некоторые из самых известных своих работ, включая «Ирисы», автопортрет в синем костюме и «Звёздную ночь». Картина, написанная за один день в больничной студии, изображает вид из восточного окна спальни[4], о котором Ван Гог писал своему брату Тео в мае 1889 года: «Сквозь железную решётку я вижу огороженное поле пшеницы, над которым по утрам во всей красе восходит солнце»</p>
+            
+        </div>
+        <div *ngIf="d" class="gt">
+            <img (click)="firs()" class="ig" src="https://arthive.net/res/media/img/oy800/article/097/7577170@2x.jpg" alt="">
+            <p>Другая работа Винсента Ван Гога</p>
+        </div>
+        <div>
+            <div class="yu" *ngIf="t">
+                <img style="width: 500px;" src="https://arthive.net/res/media/img/oy800/article/097/7577170@2x.jpg" alt="">
+                <p>Портрет доктора Гаше <br>
+                Автор: Винсет Ван Гог<br>
+                Год создания: 1890 <br>
+                Размеры: Холст, 67×56 см<br>
+                Местоположение: Музей современного искусства, Нью-Йорк <br>
+                Описание: После переезда в Овер-сюр-Уаз Винсент явился с рекомендательным письмом к психиатру Полю Гаше. Тот, будучи художником-любителем и обладая «нюхом» на картины, сразу распознал в своём пациенте гения. Вскоре после первой встречи врач попросил Ван Гога написать его портрет. В результате на свет появились две версии одного из самых известных произведений живописца — «Портрета доктора Гаше». Однако доктор не только хотел получить свой образ. Он осознавал целительное влияние, которое оказывала живопись на его подопечного, и таким образом пытался поддержать Винсента.</p>
+            </div>
+            <div class="yu" *ngIf="f">
+                <img style="width: 500px;" src="https://cdn.pixabay.com/photo/2020/07/24/02/46/painting-5432763_960_720.png" alt="">
+                <p>People river <br>
+                Автор: Тайный <br>
+                Год создания: 17век <br>
+                Размеры: Холст, {{160/2}} × 92 см <br>
+                Местоположение: Музей современного искусства, Нью-Йорк <br>
+                Описание: о данной картине и о ее создании ничего неизвестно, так как автор тайный.</p>
+            </div>
+            <div class="yu" *ngIf="a">
+                <img src="https://uznayvse.ru/images/stories2016/uzn_1459856908.jpg" alt="">
+                <p>Богатыри <br>
+                Автор: Винсент Ван Гог <br>
+                Год создания: 1881-1898 <br>
+                Размеры: Холст, масло. {{147.4/2}} × 92,1 см <br>
+                Местоположение: Третьяковская галерея, Москва<br>
+                Описание: Будущий былинный шедевр родился небольшим карандашным наброском в 1881 году; для дальнейшей работы над полотном Васнецов много лет кропотливо собирал информацию о богатырях из мифов, легенд и преданий, а также изучал подлинную древнерусскую амуницию в музеях.</p>
+            </div>
+            <div class="yu" *ngIf="g">
+                <img src="https://arthive.net/res/media/img/oy800/work/3b2/382842@2x.jpg" alt="">
+                <p>Утро в сосновом лесу<br>
+                Автор: И. И. Шишкин, К. А. Савицкий<br>
+                Год создания: 1889 <br>
+                Размеры: Холст, масло. 139 × 213 см<br>
+                Местоположение: Третьяковская галерея, Москва<br>
+                Описание: Предположительно, замысел картины был подсказан Шишкину Савицким, который позже выступил в роли соавтора и изобразил фигуры медвежат (по эскизам Шишкина). Эти медведи с некоторыми различиями в позах и количестве (сначала их было двое) фигурируют в подготовительных рисунках и эскизах (например, в Государственном Русском музее хранятся семь вариантов карандашных набросков Шишкина)[4]. Животные получились у Савицкого столь удачно, что он даже расписался на картине вместе с Шишкиным. Сам Савицкий сообщил родным: «Картина продана за 4 тысячи, и я участник в 4-ю долю»</p>
+            </div>
+        </div>
+    </div>
+    <div (click)="fir1()" class="col">
+        <img class="img" src="https://cdn.pixabay.com/photo/2020/07/24/02/46/painting-5432763_960_720.png" alt="">
+        <p>People river</p>
+    </div>
+    <div (click)="fir2()" class="col">
+        <img class="img" src="https://uznayvse.ru/images/stories2016/uzn_1459856908.jpg" alt="">
+        <p>Степь</p>
+    </div>
+    <div (click)="fir3()" class="col">
+        <img class="img" src="https://arthive.net/res/media/img/oy800/work/3b2/382842@2x.jpg" alt="">
+        <p>Bears</p>
+    </div>
+</div>
