--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,82 @@
 h1{
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(212, 163, 39);
+    font-size:x-large;
+}
+.img{
+    margin-top: 8px;
+    width: 270px;
+    height: 180px;
+    margin-left: 10px;
+}
+.col{
+    margin-left: 15px;
+    background-color: rgb(212, 163, 39);
+    width: 290px;
+    height: 210px;
+    p{
+        margin-left: 10px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        margin-top: -5px;
+        color: white;
+    }
+}
+.row{
+    justify-content: center;
+    display: flex;
+}
+    .col img {
+        opacity: 1;
+    }
     
+    .col img:hover {
+        opacity: 0.8; 
+        cursor: pointer;
+    }
+
+.yu{
+    width: 1206px;
+    height: 370px;
+    background-color: rgb(212, 163, 39);;
+    display: flex;
+    p{
+        color: rgb(255, 255, 255);
+        font-size: large;
+        margin-top: 5px;
+    }
+    img{
+        margin-top: 10px;
+        width: 500px;
+        height: 350px;
+        margin-left: 10px;
+        
+    }
+}
+.gt{
+
+    p{
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: rgb(212, 163, 39);
+        margin-top: 5px;
+    }
+}
+*{
+    display: block;
+}
+
+.ig{
+      margin-top: 10px;
+      width: 200px;
+      height: 120px;
+      margin-left: 10px;
+}
+.gt{
+    display: flex;
+    p{
+        color: white;
+    }
+    background-color: rgb(212, 163, 39);
+    width: 1206px;
+    height: 140px;
 }
